--- a/js-practice/leetcode/环境安装.md
+++ b/js-practice/leetcode/环境安装.md
@@ -40,3 +40,20 @@
     expect(sum(1, 2)).toBe(3);
   });
   ```
+
+3. 执行测试
+
+```
+➜  leetcode git:(master) ✗ npm test
+> leetcode@1.0.0 test /workbench/dev/src/github.com/researchlab/febp/js-practice/leetcode
+> jest
+
+ PASS  test/string/sum.test.js
+
+Test Suites: 1 passed, 1 total
+Tests:       1 passed, 1 total
+Snapshots:   0 total
+Time:        0.125 s
+Ran all test suites.
+➜  leetcode git:(master) ✗ 
+```
